--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -11,6 +11,7 @@ uvicorn = "^0.34.0"
 fastapi = "^0.115.12"
 numpy = "^2.2.4"
 opencv-python = "^4.11.0.86"
+websockets = "^15.0.1"
 
 [build-system]
 requires = ["poetry-core"]
